--- a/grand/post/templates/post/about.html
+++ b/grand/post/templates/post/about.html
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="pl">
-<head>
-	<title></title>
-</head>
-<body>
-	<h1>Test strony about</h1>
-</body>
-</html>
-	
+﻿{% extends "post/base.html" %}
+{% block content %}
+	<h1>About</h1>
+{% endblock content %}
