--- a/grand/post/templates/post/home.html
+++ b/grand/post/templates/post/home.html
@@ -1,14 +1,10 @@
-﻿<!DOCTYPE html>
-<html lang="pl">
-<head>
-	<title>Strona główna - Grand Mem</title>
-</head>
-<body>
+﻿{% extends "post/base.html" %}
+{% block content %}
 	{% for post in posts %}
 	<h1>{{ post.title }}</h1>
 	<p>By {{ post.author }} on {{ post.date_posted }}</p>
 	<p>{{ post.content }}</p>
 	{% endfor %}
-</body>
-</html>
+{% endblock content %}
+
 	
