--- a/grand/post/templates/post/base.html
+++ b/grand/post/templates/post/base.html
@@ -15,9 +15,57 @@
 	{% endif %}
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 	<div class="container">
+	<a class="navbar-brand" href="{% url 'post-home' %}">Grand Mem</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+	<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarResponsive">
+	<ul class="navbar-nav ml-auto">
+	  <li class="nav-item active">
+		<a class="nav-link" href="{% url 'post-home'%}">Strona główna
+		
+		</a>
+	  </li>
+	  <li class="nav-item">
+		<a class="nav-link" href="{% url 'post-about' %}">O nas</a>
+	  </li>
+	  {% if user.is_authenticated %}
+	  <li class="nav-item">
+		<a class="nav-link" href="{%url 'profile' %}">Moje konto</a>
+	  </li>
+	  <li class="nav-item">
+		<a class="nav-link" href="{%url 'logout' %}">Wyloguj się</a>
+	  </li>
+	  {% else %}
+	  <li class="nav-item">
+		<a class="nav-link" href="{%url 'login' %}">Loguj</a>
+	  </li>
+	  <li class="nav-item">
+		<a class="nav-link" href="{% url 'registration' %}">Rejestracja</a>
+	  </li>
+	  {% endif %}
+	</ul>
+	</div>
+	</div>
+	</nav>
+	<div class="container">
+		{% if messages %}
+			{% for message in messages %}
+				<div class="alert alert-{{ message.tags }}">
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endif %}
 		{% block content %}{% endblock %}
 	</div>
+	<footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Grand Mem 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
