--- a/grand/post/templates/post/home.html
+++ b/grand/post/templates/post/home.html
@@ -1,10 +1,82 @@
 ﻿{% extends "post/base.html" %}
 {% block content %}
+<div class="row">
+	<div class="col-md-8">
+	<br>
 	{% for post in posts %}
-	<h1>{{ post.title }}</h1>
-	<p>By {{ post.author }} on {{ post.date_posted }}</p>
-	<p>{{ post.content }}</p>
+	<div class="card mb-4">
+		<img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+		<div class="card-body">
+			<h2 class="card-title">{{ post.title }}</h2>
+			<p class="card-text">{{ post.content }}</p>
+			<a href="#" class="btn btn-primary">Czytaj więcej &rarr;</a>
+		</div>
+		<div class="card-footer text-muted">
+			Opublikowano przez  {{ post.author }}, {{ post.date_posted }}
+		</div>
+	</div>
 	{% endfor %}
+	<ul class="pagination justify-content-center mb-4">
+		<li class="page-item">
+			<a class="page-link" href="#">&larr; Cofnij</a>
+		</li>
+		<li class="page-item disabled">
+			<a class="page-link" href="#">Dalej &rarr;</a>
+		</li>
+	</ul>
+	</div>
+	<div class="col-md-4">
+		<div class="card my-4">
+			<h5 class="card-header">Wyszukaj</h5>
+			<div class="card-body">
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Podaj słowo klucz">
+					<span class="input-group-btn">
+						<button class="btn btn-secondary" type="button">Go!</button>
+					</span>
+				</div>
+			</div>
+		</div>
+	<div class="card my-4">
+		<h5 class="card-header">Kategorie</h5>
+			<div class="card-body">
+				<div class="row">
+					<div class="col-lg-6">
+						<ul class="list-unstyled mb-0">
+							<li>
+								<a href="#">HTML</a>
+							</li>
+							<li>
+								<a href="#">CSS</a>
+							</li>
+							<li>
+								<a href="#">JavaScript</a>
+							</li>
+						</ul>
+					</div>
+				<div class="col-lg-6">
+					<ul class="list-unstyled mb-0">
+						<li>
+							<a href="#">Bootstrap</a>
+						</li>
+						<li>
+							<a href="#">PHP</a>
+						</li>
+						<li>
+							<a href="#">Python</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="card my-4">
+		<h5 class="card-header">Panel boczny</h5>
+		<div class="card-body">
+			Aplikacja systemowa w systemach operacyjnych Microsoft Windows, gromadząca w jednym miejscu narzędzia do ustawiania i zmiany parametrów systemu operacyjnego.
+		</div>
+	</div>
+	</div>
+</div>
+</div>
 {% endblock content %}
-
-	
