--- a/grand/post/templates/post/base.html
+++ b/grand/post/templates/post/base.html
@@ -5,9 +5,11 @@
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="{% static 'post/main.css' %}">
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 	{% if title %}
 		<title>Grand Mem - {{ title }}</title>
 	{% else %}
@@ -15,40 +17,45 @@
 	{% endif %}
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-	<div class="container">
-	<a class="navbar-brand" href="{% url 'post-home' %}">Grand Mem</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-	<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarResponsive">
-	<ul class="navbar-nav ml-auto">
-	  <li class="nav-item active">
-		<a class="nav-link" href="{% url 'post-home'%}">Strona główna
-		
-		</a>
-	  </li>
-	  <li class="nav-item">
-		<a class="nav-link" href="{% url 'post-about' %}">O nas</a>
-	  </li>
-	  {% if user.is_authenticated %}
-	  <li class="nav-item">
-		<a class="nav-link" href="{%url 'profile' %}">Moje konto</a>
-	  </li>
-	  <li class="nav-item">
-		<a class="nav-link" href="{%url 'logout' %}">Wyloguj się</a>
-	  </li>
-	  {% else %}
-	  <li class="nav-item">
-		<a class="nav-link" href="{%url 'login' %}">Loguj</a>
-	  </li>
-	  <li class="nav-item">
-		<a class="nav-link" href="{% url 'registration' %}">Rejestracja</a>
-	  </li>
-	  {% endif %}
-	</ul>
-	</div>
-	</div>
+	<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+	  <a class="navbar-brand" href="{% url 'post-home' %}">Grand Mem</a>
+	  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="true">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div id="navb" class="navbar-collapse collapse hide">
+		<ul class="navbar-nav">
+		  <li class="nav-item">
+			<a class="nav-link" href="{% url 'post-home' %}">Strona główna</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="{% url 'post-about' %}">O nas</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="{% url 'post-contact' %}">Kontakt</a>
+		  </li>
+		</ul>
+
+		<ul class="nav navbar-nav ml-auto">
+		  {% if user.is_authenticated %}
+		  <li class="nav-item">
+			<a class="nav-link" style="color:white;" href="{% url 'mem-create' %}">Dodaj MEM</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" style="color:white;">Witaj, {{ user.username }}</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="{% url 'logout' %}"><span class="fas fa-sign-in-alt"></span> Wyloguj</a>
+		  </li>
+		  {% else %}
+		  <li class="nav-item">
+			<a class="nav-link" href="{% url 'registration' %}"><span class="fas fa-user"></span> Rejestracja</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="{% url 'login' %}"><span class="fas fa-sign-in-alt"></span> Logowanie</a>
+		  </li>
+		  {% endif %}
+		</ul>
+	  </div>
 	</nav>
 	<div class="container">
 		{% if messages %}
