--- a/grand/users/templates/users/registration.html
+++ b/grand/users/templates/users/registration.html
@@ -1,11 +1,12 @@
 ﻿{% extends "post/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
 	<div class="content-section">
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
 				<legend class="border-bottom mb-4">Dołącz do Nas!</legend>
-				{{ form.as_p }}
+				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
 				<button class="btn btn-outline-info" type="submit">Zarejestruj się</button>
