--- a/grand/post/templates/post/base.html
+++ b/grand/post/templates/post/base.html
@@ -1,83 +1,105 @@
 ﻿{% load static %}
-<!DOCTYPE html>
 <html lang="pl">
-<head>
-	<!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<head>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Grand Mem jest to nowo powstała strona z najzabawniejszymi i najlepiej wyselekcjowanymi memami idealnie wpadającymi w gust każdego odwiedzającego Nas użytkownika.">
+	<meta name="author" content="Radosław Gzyl">
+
 	{% if title %}
 		<title>Grand Mem - {{ title }}</title>
 	{% else %}
 		<title>Grand Mem</title>
 	{% endif %}
-</head>
-<body>
-	<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-	  <a class="navbar-brand" href="{% url 'post-home' %}">Grand Mem</a>
-	  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="true">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div id="navb" class="navbar-collapse collapse hide">
-		<ul class="navbar-nav">
-		  <li class="nav-item">
-			<a class="nav-link" href="{% url 'post-home' %}">Strona główna</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="{% url 'post-about' %}">O nas</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="{% url 'post-contact' %}">Kontakt</a>
-		  </li>
-		</ul>
 
-		<ul class="nav navbar-nav ml-auto">
-		  {% if user.is_authenticated %}
-		  <li class="nav-item">
-			<a class="nav-link" style="color:white;" href="{% url 'mem-create' %}">Dodaj MEM</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" style="color:white;">Witaj, {{ user.username }}</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="{% url 'logout' %}"><span class="fas fa-sign-in-alt"></span> Wyloguj</a>
-		  </li>
-		  {% else %}
-		  <li class="nav-item">
-			<a class="nav-link" href="{% url 'registration' %}"><span class="fas fa-user"></span> Rejestracja</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="{% url 'login' %}"><span class="fas fa-sign-in-alt"></span> Logowanie</a>
-		  </li>
-		  {% endif %}
-		</ul>
-	  </div>
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/all.min.css' %}" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="{% static 'css/agency.min.css' %}" rel="stylesheet">
+	
+	<style>
+		body {
+			margin-top:-30px;
+			background-color:#dfdfdf;
+		}
+	</style>
+
+</head>
+
+<body>
+
+	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+		<div class="container">
+			<a class="navbar-brand js-scroll-trigger" href="{% url 'post-home' %}">Grand Mem</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				Menu <i class="fas fa-bars"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav text-uppercase ml-auto">
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="{% url 'post-home' %}">Strona główna</a>
+					</li>			
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="{% url 'post-about' %}">O nas</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="{% url 'post-contact' %}">Kontakt</a>
+					</li>
+					{% if user.is_authenticated %}
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="{% url 'mem-create' %}"><strong>Dodaj MEM</strong></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" style="color:#fed136;">Witaj, {{ user.username }}</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="{% url 'logout' %}"><span class="fas fa-sign-in-alt"></span>  Wyloguj</a>
+					</li>
+					{% else %}
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="{% url 'registration' %}"><span class="fas fa-user"></span>  Rejestracja</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="{% url 'login' %}"><span class="fas fa-sign-in-alt"></span>  Logowanie</a>
+					</li>
+					{% endif %}
+				</ul>
+			</div>
+		</div>
 	</nav>
-	<div class="container">
-		{% if messages %}
-			{% for message in messages %}
-				<div class="alert alert-{{ message.tags }}">
-					{{ message }}
+  
+	{% if messages %}
+		{% for message in messages %}
+			<div class="alert alert-{{ message.tags }}">
+				{{ message }}
+			</div>
+		{% endfor %}
+	{% endif %}
+	{% block content %}{% endblock %}
+
+	<footer class="footer" style="background-color:#252525; color:white;">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<span class="copyright">Copyright &copy; Grand Mem 2019</span>
 				</div>
-			{% endfor %}
-		{% endif %}
-		{% block content %}{% endblock %}
-	</div>
-	<footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Grand Mem 2019</p>
-    </div>
-    <!-- /.container -->
-  </footer>
-	<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+			</div>
+		</div>
+	</footer>
+	
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+	<script src="{% static 'js/jquery.easing.min.js' %}"></script>
+	<script src="{% static 'js/agency.min.js' %}"></script>
+  
 </body>
+
 </html>
 	
