--- a/grand/post/templates/post/home.html
+++ b/grand/post/templates/post/home.html
@@ -1,85 +1,38 @@
 ﻿{% extends "post/base.html" %}
 {% block content %}
+
+<header class="masthead">
+	<div class="container">
+		<div class="intro-text">
+			<div class="intro-lead-in">Witamy na naszej stronie !</div>
+			<div class="intro-heading text-uppercase">Zapraszamy na najlepsze memy w sieci</div>
+			<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">ZOBACZ</a>
+		</div>
+	</div>
+</header>
+	
+<div class="container" id="portfolio">
 <div class="row">
 	<div class="col-md-8">
 	<br>
 	{% for post in posts %}
 	<div class="card mb-4">
-		<img class="card-img-top" src="{{ post.image.url }}">
+		<a href="{% url 'mem-detail' post.id %}"><h2 style="text-align:center; padding:10px; text-decoration:none;" class="card-title">{{ post.title }}</h2></a>
+		<a href="{% url 'mem-detail' post.id %}"><img class="card-img-top" src="{{ post.image.url }}"></a>
 		<div class="card-body">
-			<h2 class="card-title">{{ post.title }}</h2>
 			<p class="card-text">{{ post.content }}</p>
 			<div id="fb-root"></div>
 			<script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v3.2&appId=377731169103091&autoLogAppEvents=1"></script>
 			<div class="fb-like" data-href="{% url 'mem-detail' post.id %}" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
-			<br>
-			<a href="{% url 'mem-detail' post.id %}" class="btn btn-primary">Czytaj więcej &rarr;</a>
 		</div>
 		<div class="card-footer text-muted">
 			Opublikowano przez  {{ post.author }}, {{ post.date_posted }}
 		</div>
 	</div>
 	{% endfor %}
-	<ul class="pagination justify-content-center mb-4">
-		<li class="page-item">
-			<a class="page-link" href="#">&larr; Cofnij</a>
-		</li>
-		<li class="page-item disabled">
-			<a class="page-link" href="#">Dalej &rarr;</a>
-		</li>
-	</ul>
 	</div>
 	<div class="col-md-4">
-		<div class="card my-4">
-			<h5 class="card-header">Wyszukaj</h5>
-			<div class="card-body">
-				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Podaj słowo klucz">
-					<span class="input-group-btn">
-						<button class="btn btn-secondary" type="button">Go!</button>
-					</span>
-				</div>
-			</div>
-		</div>
-	<div class="card my-4">
-		<h5 class="card-header">Kategorie</h5>
-			<div class="card-body">
-				<div class="row">
-					<div class="col-lg-6">
-						<ul class="list-unstyled mb-0">
-							<li>
-								<a href="#">HTML</a>
-							</li>
-							<li>
-								<a href="#">CSS</a>
-							</li>
-							<li>
-								<a href="#">JavaScript</a>
-							</li>
-						</ul>
-					</div>
-				<div class="col-lg-6">
-					<ul class="list-unstyled mb-0">
-						<li>
-							<a href="#">Bootstrap</a>
-						</li>
-						<li>
-							<a href="#">PHP</a>
-						</li>
-						<li>
-							<a href="#">Python</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="card my-4">
-		<h5 class="card-header">Panel boczny</h5>
-		<div class="card-body">
-			Aplikacja systemowa w systemach operacyjnych Microsoft Windows, gromadząca w jednym miejscu narzędzia do ustawiania i zmiany parametrów systemu operacyjnego.
-		</div>
-	</div>
+		<iframe marginheight="0px" marginwidth="0px" frameborder="0" scrolling="no" allow="autoplay" id="ebBannerIFrame_58512643_5416325556770238" name="ebBannerIFrame_58512643_5416325556770238" src="https://secure-ds.serving-sys.com/BurstingRes/Site-63639/WSFolders/14196441//index.html?v=_2_104_1_0&amp;n=1" onload="(function(e) { var event = new EBG.Events.Event(EBG.Events.EventNames.ELEMENT_LOADED);event.dispatcher = this;event.eventData = { DOMEvent: e, elementId: &quot;ebBannerIFrame_58512643_5416325556770238&quot;, adUId:&quot;58512643_5416325556770238&quot; };event.timing = EBG.Events.EventTiming.ONTIME_AND_AFTER;EBG.eventMgr.dispatchEvent(event);} )(typeof arguments != &quot;undefined&quot; ? arguments[0] : null);" width="160" height="600" allowfullscreen="true" style="border:0px; padding:0px; margin:0px; width:160px; height:600px; "></iframe>
 	</div>
 </div>
 </div>
