--- a/grand/post/templates/post/home.html
+++ b/grand/post/templates/post/home.html
@@ -32,7 +32,17 @@
 	{% endfor %}
 	</div>
 	<div class="col-md-4">
-		<iframe marginheight="0px" marginwidth="0px" frameborder="0" scrolling="no" allow="autoplay" id="ebBannerIFrame_58512643_5416325556770238" name="ebBannerIFrame_58512643_5416325556770238" src="https://secure-ds.serving-sys.com/BurstingRes/Site-63639/WSFolders/14196441//index.html?v=_2_104_1_0&amp;n=1" onload="(function(e) { var event = new EBG.Events.Event(EBG.Events.EventNames.ELEMENT_LOADED);event.dispatcher = this;event.eventData = { DOMEvent: e, elementId: &quot;ebBannerIFrame_58512643_5416325556770238&quot;, adUId:&quot;58512643_5416325556770238&quot; };event.timing = EBG.Events.EventTiming.ONTIME_AND_AFTER;EBG.eventMgr.dispatchEvent(event);} )(typeof arguments != &quot;undefined&quot; ? arguments[0] : null);" width="160" height="600" allowfullscreen="true" style="border:0px; padding:0px; margin:0px; width:160px; height:600px; "></iframe>
+		<br/>
+		<img src="https://naszstrzegom.pl/web/files/rad.jpg" style="margin: 0 auto; display:block;">
+		<br/>
+		<img src="https://img4.oferia.pl/248ddb0cd127ad24ae00fcadeb4edf99_665_450_0_1.jpg" width="80%" style="margin: 0 auto; display:block;">
+		<br/>
+		<img src="http://infostrzegom.pl/wp-content/uploads/2019/02/taxi.jpg" width="80%" style="margin: 0 auto; display:block;">
+		<br/>
+		<img src="https://gallop.pl/wp-content/uploads/2019/05/sht2019-2426x1365.jpg" width="80%" style="margin: 0 auto; display:block;">
+		<br/>
+		<img src="https://www.papercut.pl/images/portfolio/Kopalnia-Strzegom/branding-Kopalnia-Granitu-Strzegom-Facebook.png" width="80%" style="margin: 0 auto; display:block;">
+		<br/>
 	</div>
 </div>
 </div>
