--- a/grand/users/templates/users/registration.html
+++ b/grand/users/templates/users/registration.html
@@ -1,6 +1,24 @@
 ﻿{% extends "post/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<style>
+	#bg {
+		padding-top: 125px;
+		padding-bottom:10px;
+		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		text-align:center;
+		color: #fed136;
+		font-family: 'Montserrat', sans-serif;
+	}
+</style>
+
+<div id="bg">
+	<h2 class="card-title">Zarejestruj się</h2>
+</div>
+<br/>
+<div class="container">
 	<div class="content-section">
 		<form method="POST">
 			{% csrf_token %}
@@ -18,4 +36,6 @@
 			</small>
 		</div>
 	</div>
+</div>
+<br />
 {% endblock content %}
