--- a/grand/post/templates/post/about.html
+++ b/grand/post/templates/post/about.html
@@ -1,4 +1,98 @@
 ﻿{% extends "post/base.html" %}
 {% block content %}
-	<h1>About</h1>
+<style>
+	#bg {
+		padding-top: 125px;
+		padding-bottom:10px;
+		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		text-align:center;
+		color: #fed136;
+		font-family: 'Montserrat', sans-serif;
+	}
+</style>
+
+<div id="bg">
+	<h2 class="card-title">O nas</h2>
+</div>
+<section class="page-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">O nas</h2>
+          <h3 class="section-subheading text-muted">Wyszczególnione najważniejsze informacje dotyczące naszego projektu</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>marzecz 2019</h4>
+                  <h4 class="subheading">Skąd taki pomysł ?</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Od zawsze lubiliśmy przeglądać memy na różnorodnych stronach. Pomysł zrodził się po dyskusjach ze znajomymi, że brakuje w internecie strony tylko i wyłącznie z najlepszymi memami. Idealnie wyselekcjowanymi.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>kwiecień 2019</h4>
+                  <h4 class="subheading">Czas realizacji pomysłu</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Marzec to okres w którym powstała strona od strony programowania. W tym miesiącu udało stworzyć się wszystkie zaplanowane przez Nas funkcjonalnośći. Oczywiście poza dostosowaniem grafiki, wyglądu naszej strony. </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>maj 2019</h4>
+                  <h4 class="subheading">Czas na wygląd</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">W maju przez dłuższy okres czasu zabieraliśmy się do stoworzenia layoutu naszej strony. Cały czas brakowało pomysłu na wygląd.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>czerwiec 2019</h4>
+                  <h4 class="subheading">Finał projektu</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Czerwiec to okres zakończenia naszego projektu. Podsumowanie co udało się zrobić, a czego nie. Wydaje Nam się, że wszystko zostało zrealizowane zgodnie z przewidzianym planem. Jedynie co to wygląd naszej strony jest średni, ale zawsze można go jeszcze dopracować.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+				<br>
+                <h4>Obecnie</h4>
+				<br>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock content %}
