--- a/grand/post/templates/post/contact.html
+++ b/grand/post/templates/post/contact.html
@@ -1,4 +1,58 @@
 ﻿{% extends "post/base.html" %}
 {% block content %}
-	<h1>Contact</h1>
+<style>
+	#bg {
+		padding-top: 125px;
+		padding-bottom:10px;
+		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		text-align:center;
+		color: #fed136;
+		font-family: 'Montserrat', sans-serif;
+	}
+</style>
+
+<div id="bg">
+	<h2 class="card-title">Kontakt</h2>
+</div>
+
+<section class="page-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Dane kontatkowe</h2>
+		  <br/><br/>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-home fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Grand Mem</h4>
+          <p class="text-muted">Projekt stworzony na potrzeby przedmiotu "Indywidualny Projekt Programistyczny".</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-phone fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">+48 74 855 37 44</h4>
+          <p class="text-muted">Numer telefonu stacjonarnego została zmyślony na potrzeby zakładki "kontant".</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">grandmem@gmail.com</h4>
+          <p class="text-muted">Pondany adres e-mail, tak samo jak numer telefonu został wymyślony.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.5738841844823!2d17.025861315641787!3d51.11632167957279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fe9e0db76fdfd%3A0x4e45ce7ac38af671!2sWydzia%C5%82+Fizyki+i+Astronomii+Uniwersytetu+Wroc%C5%82awskiego!5e0!3m2!1spl!2spl!4v1559238614730!5m2!1spl!2spl" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 {% endblock content %}
