--- a/grand/post/templates/post/mem_confirm_delete.html
+++ b/grand/post/templates/post/mem_confirm_delete.html
@@ -1,5 +1,23 @@
 ﻿{% extends "post/base.html" %}
 {% block content %}
+<style>
+	#bg {
+		padding-top: 125px;
+		padding-bottom:10px;
+		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		text-align:center;
+		color: #fed136;
+		font-family: 'Montserrat', sans-serif;
+	}
+</style>
+
+<div id="bg">
+	<h2 class="card-title">Usuń mem</h2>
+</div>
+<br/>
+<div class="container">
 	<div class="content-section">
 		<form method="POST">
 			{% csrf_token %}
@@ -7,10 +25,12 @@
 				<legend class="border-bottom mb-4">Usuń mem</legend>
 				<h2>Czy jesteś pewien usunięcia postu "{{ object.title }}"
 			</fieldset>
+			<img src="https://images.vexels.com/media/users/3/134491/isolated/preview/c4aed5e8b55387c429d1f9b36a9859b2-cry-emoji-emoticon-by-vexels.png" width="45%" style="margin: 0 auto; display:block;">
 			<div class="form-group">
 				<button class="btn btn-outline-danger" type="submit">Tak, usuń</button>
 				<a class="btn btn-outline-secondary" href="{% url 'mem-detail' object.id %}">Anuluj</a>
 			</div>
 		</form>
 	</div>
+</div>
 {% endblock content %}
