--- a/grand/post/templates/post/mem_detail.html
+++ b/grand/post/templates/post/mem_detail.html
@@ -48,58 +48,19 @@
 			
 		</div>
 	</div>
-		<div class="col-md-4">
-			<div class="card my-4">
-				<h5 class="card-header">Wyszukaj</h5>
-				<div class="card-body">
-					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Podaj słowo klucz">
-						<span class="input-group-btn">
-							<button class="btn btn-secondary" type="button">Go!</button>
-						</span>
-					</div>
-				</div>
-			</div>
-		<div class="card my-4">
-			<h5 class="card-header">Kategorie</h5>
-				<div class="card-body">
-					<div class="row">
-						<div class="col-lg-6">
-							<ul class="list-unstyled mb-0">
-								<li>
-									<a href="#">HTML</a>
-								</li>
-								<li>
-									<a href="#">CSS</a>
-								</li>
-								<li>
-									<a href="#">JavaScript</a>
-								</li>
-							</ul>
-						</div>
-					<div class="col-lg-6">
-						<ul class="list-unstyled mb-0">
-							<li>
-								<a href="#">Bootstrap</a>
-							</li>
-							<li>
-								<a href="#">PHP</a>
-							</li>
-							<li>
-								<a href="#">Python</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card my-4">
-			<h5 class="card-header">Panel boczny</h5>
-			<div class="card-body">
-				Aplikacja systemowa w systemach operacyjnych Microsoft Windows, gromadząca w jednym miejscu narzędzia do ustawiania i zmiany parametrów systemu operacyjnego.
-			</div>
-		</div>
-		</div>
+	<div class="col-md-4">
+		<br/>
+		<img src="https://naszstrzegom.pl/web/files/rad.jpg" style="margin: 0 auto; display:block;">
+		<br/>
+		<img src="https://img4.oferia.pl/248ddb0cd127ad24ae00fcadeb4edf99_665_450_0_1.jpg" width="80%" style="margin: 0 auto; display:block;">
+		<br/>
+		<img src="http://infostrzegom.pl/wp-content/uploads/2019/02/taxi.jpg" width="80%" style="margin: 0 auto; display:block;">
+		<br/>
+		<img src="https://gallop.pl/wp-content/uploads/2019/05/sht2019-2426x1365.jpg" width="80%" style="margin: 0 auto; display:block;">
+		<br/>
+		<img src="https://www.papercut.pl/images/portfolio/Kopalnia-Strzegom/branding-Kopalnia-Granitu-Strzegom-Facebook.png" width="80%" style="margin: 0 auto; display:block;">
+		<br/>
+	</div>
 	</div>
 </div>
 {% endblock content %}
