--- a/grand/post/templates/post/mem_form.html
+++ b/grand/post/templates/post/mem_form.html
@@ -1,11 +1,29 @@
 ﻿{% extends "post/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<style>
+	#bg {
+		padding-top: 125px;
+		padding-bottom:10px;
+		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		text-align:center;
+		color: #fed136;
+		font-family: 'Montserrat', sans-serif;
+	}
+</style>
+
+<div id="bg">
+	<h2 class="card-title">Dodaj MEM-a</h2>
+</div>
+<br/><br/>
+<div class="container">
 	<div class="content-section">
 		<form method="POST" enctype="multipart/form-data">
 			{% csrf_token %}
 			<fieldset class="form-group">
-				<legend class="border-bottom mb-4">Mem Kreator</legend>
+				<legend class="border-bottom mb-4">Dodaj mem</legend>
 				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
@@ -13,4 +31,7 @@
 			</div>
 		</form>
 	</div>
+</div>
+<br />
+<br/>
 {% endblock content %}
