--- a/grand/post/templates/post/about.html
+++ b/grand/post/templates/post/about.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">O nas</h2>
+          <h2 class="section-heading text-uppercase">HISTORIA</h2>
           <h3 class="section-subheading text-muted">Wyszczególnione najważniejsze informacje dotyczące naszego projektu</h3>
         </div>
       </div>
