--- a/grand/post/templates/post/mem_form.html
+++ b/grand/post/templates/post/mem_form.html
@@ -23,7 +23,7 @@
 		<form method="POST" enctype="multipart/form-data">
 			{% csrf_token %}
 			<fieldset class="form-group">
-				<legend class="border-bottom mb-4">Dodaj mem</legend>
+				<legend class="border-bottom mb-4">Dodaj nowy mem</legend>
 				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
