--- a/grand/users/templates/users/logout.html
+++ b/grand/users/templates/users/logout.html
@@ -14,7 +14,7 @@
 </style>
 
 <div id="bg">
-	<h2 class="card-title">Zostałeś wylogowany</h2>
+	<h2 class="card-title">Wylogowałeś się</h2>
 </div>
 <br/>
 <div class="container" style="text-align:center;">
