--- a/grand/post/templates/post/base.html
+++ b/grand/post/templates/post/base.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link href="{% static 'css/agency.min.css' %}" rel="stylesheet">
-	<link rel="icon" href="http://aux2.iconspalace.com/uploads/smile-icon-256.png" type="image/x-icon">
+	<link rel="icon" href="{% static 'img/favicon.png' %}" sizes="16x16" type="image/png">
 	
 	<style>
 		body {
