--- a/grand/users/templates/users/logout.html
+++ b/grand/users/templates/users/logout.html
@@ -4,7 +4,7 @@
 	#bg {
 		padding-top: 125px;
 		padding-bottom:10px;
-		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background: url(https://img.freepik.com/free-vector/dark-wall-background_1390-191.jpg?size=338&ext=jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
 		text-align:center;
@@ -18,9 +18,9 @@
 </div>
 <br/>
 <div class="container" style="text-align:center;">
-	<h1>Zostałeś wylogowany prawidłowo</h1>
+	<h1 style="color:white;">Zostałeś wylogowany prawidłowo</h1>
 	<img src="https://cdn.pixabay.com/photo/2015/08/17/04/41/smilies-892013_960_720.png"/ width="45%">
-	<h2> Zapraszamy ponownie do odwiedzenia naszej strony </h2>
+	<h2 style="color:white;"> Zapraszamy ponownie do odwiedzenia naszej strony </h2>
 	<div class="border-top pt-3">
 		<small class="text-muted">
 			<a class="ml-2" href="{% url 'login' %}">Zaloguj się ponownie!</a>
