--- a/grand/users/templates/users/registration.html
+++ b/grand/users/templates/users/registration.html
@@ -5,17 +5,21 @@
 	#bg {
 		padding-top: 125px;
 		padding-bottom:10px;
-		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background: url(https://img.freepik.com/free-vector/dark-wall-background_1390-191.jpg?size=338&ext=jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
 		text-align:center;
 		color: #fed136;
 		font-family: 'Montserrat', sans-serif;
 	}
+	
+	label {
+		color:white;
+	}
 </style>
 
 <div id="bg">
-	<h2 class="card-title">Zarejestruj się</h2>
+	<h2 class="card-title">Zarejestruj sie</h2>
 </div>
 <br/>
 <div class="container">
@@ -23,11 +27,11 @@
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
-				<legend class="border-bottom mb-4">Dołącz do Nas!</legend>
+				<legend class="border-bottom mb-4" style="color:white;">Dołącz do Nas!</legend>
 				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
-				<button class="btn btn-outline-info" type="submit">Zarejestruj się</button>
+				<button class="btn btn-primary text-uppercase btn-outline-info" type="submit">Zarejestruj się</button>
 			</div>
 		</form>
 		<div class="border-top pt-3">
