--- a/grand/post/templates/post/about.html
+++ b/grand/post/templates/post/about.html
@@ -4,7 +4,7 @@
 	#bg {
 		padding-top: 125px;
 		padding-bottom:10px;
-		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background: url(https://img.freepik.com/free-vector/dark-wall-background_1390-191.jpg?size=338&ext=jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
 		text-align:center;
@@ -20,8 +20,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">HISTORIA</h2>
-          <h3 class="section-subheading text-muted">Wyszczególnione najważniejsze informacje dotyczące naszego projektu</h3>
+          <h2 class="section-heading text-uppercase" style="color:white;">HISTORIA</h2>
+          <h3 class="section-subheading text-muted" style="color:white;">Wyszczególnione najważniejsze informacje dotyczące naszego projektu</h3>
         </div>
       </div>
       <div class="row">
@@ -33,7 +33,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>marzecz 2019</h4>
+                  <h4 style="color:white;">marzecz 2019</h4>
                   <h4 class="subheading">Skąd taki pomysł ?</h4>
                 </div>
                 <div class="timeline-body">
@@ -47,7 +47,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>kwiecień 2019</h4>
+                  <h4 style="color:white;">kwiecień 2019</h4>
                   <h4 class="subheading">Czas realizacji pomysłu</h4>
                 </div>
                 <div class="timeline-body">
@@ -61,7 +61,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>maj 2019</h4>
+                  <h4 style="color:white;">maj 2019</h4>
                   <h4 class="subheading">Czas na wygląd</h4>
                 </div>
                 <div class="timeline-body">
@@ -75,7 +75,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>czerwiec 2019</h4>
+                  <h4 style="color:white;">czerwiec 2019</h4>
                   <h4 class="subheading">Finał projektu</h4>
                 </div>
                 <div class="timeline-body">
