--- a/grand/post/templates/post/base.html
+++ b/grand/post/templates/post/base.html
@@ -23,12 +23,14 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link href="{% static 'css/agency.min.css' %}" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK&display=swap" rel="stylesheet">
 	<link rel="icon" href="{% static 'img/favicon.png' %}" sizes="16x16" type="image/png">
 	
 	<style>
 		body {
 			margin-top:-30px;
-			background-color:rgb(245, 250, 253);
+			background-color:#252525;
+			font-family:Arial;
 		}
 	</style>
 
@@ -89,7 +91,7 @@
 	{% endif %}
 	{% block content %}{% endblock %}
 
-	<footer class="footer" style="background-color:#252525; color:white;">
+	<footer class="footer" style="background-color:black; color:white;">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
