--- a/grand/post/templates/post/contact.html
+++ b/grand/post/templates/post/contact.html
@@ -4,7 +4,7 @@
 	#bg {
 		padding-top: 125px;
 		padding-bottom:10px;
-		background: url(http://srokate.pl/wp-content/uploads/2014/03/dark-background-1.jpg);
+		background: url(https://img.freepik.com/free-vector/dark-wall-background_1390-191.jpg?size=338&ext=jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
 		text-align:center;
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Dane kontatkowe</h2>
+          <h2 class="section-heading text-uppercase"  style="color:white;">Dane kontatkowe</h2>
 		  <br/><br/>
         </div>
       </div>
@@ -31,7 +31,7 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-home fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Grand Mem</h4>
+          <h4 class="service-heading"  style="color:white;">Grand Mem</h4>
           <p class="text-muted">Projekt stworzony na potrzeby przedmiotu "Indywidualny Projekt Programistyczny".</p>
         </div>
         <div class="col-md-4">
@@ -39,7 +39,7 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-phone fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">+48 74 855 37 44</h4>
+          <h4 class="service-heading"  style="color:white;">+48 74 855 37 44</h4>
           <p class="text-muted">Numer telefonu stacjonarnego została zmyślony na potrzeby zakładki "kontant".</p>
         </div>
         <div class="col-md-4">
@@ -47,7 +47,7 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">grandmem@gmail.com</h4>
+          <h4 class="service-heading" style="color:white;">grandmem@gmail.com</h4>
           <p class="text-muted">Pondany adres e-mail, tak samo jak numer telefonu został wymyślony.</p>
         </div>
       </div>
