--- a/grand/post/templates/post/mem_detail.html
+++ b/grand/post/templates/post/mem_detail.html
@@ -15,7 +15,7 @@
 </style>
 
 <div id="bg">
-	<h2 class="card-title" style="font-family:Arial;">_ _ _</h2>
+	<img src="http://strzegom2019.pl/templates/ep-me2019/images/logo.png" style="width:60%">
 </div>
 
 <div class="container">
