--- a/grand/post/templates/post/mem_form.html
+++ b/grand/post/templates/post/mem_form.html
@@ -19,7 +19,7 @@
 </style>
 
 <div id="bg">
-	<h2 class="card-title" style="color:white;">Dodaj MEM-a</h2>
+	<h2 class="card-title">Dodaj MEM-a</h2>
 </div>
 <br/><br/>
 <div class="container" style="color:grey;">
